<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.in_store.InStoreFragment">

    <TextView
        android:id="@+id/text_in_store_store_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/promotions_title2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/promotions_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="casual"
        android:text="Promotions "
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#673AB7"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/promotions_list_store"
        android:layout_width="371dp"
        android:layout_height="229dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promotions_title2"
        app:layout_goneMarginLeft="100dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promotions_list_store">

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_in_store_queue_checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:padding="8dp"
                android:text="@string/title_label_in_store_queue_checkout"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <RatingBar
                android:id="@+id/queue_in_store_checkout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:numStars="5"
                android:paddingTop="12dp"
                android:progressDrawable="@drawable/custom_rating_icons"
                android:rating="1"
                android:stepSize="1" />

            <ImageButton
                android:id="@+id/btn_in_store_help_queue_checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="4dp"
                android:src="@drawable/ic_help" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_in_store_queue_fitting_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:text="@string/title_label_in_store_queue_fitting_rooms"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <RatingBar
                android:id="@+id/queue_in_store_fitting_rooms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:numStars="5"
                android:paddingTop="12dp"
                android:progressDrawable="@drawable/custom_rating_icons"
                android:rating="4"
                android:stepSize="1" />

            <ImageButton
                android:id="@+id/btn_in_store_help_queue_fitting_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="4dp"
                android:src="@drawable/ic_help" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_in_store_scanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Scan product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3"
        app:layout_constraintVertical_bias="0.13999999" />

    <Button
        android:id="@+id/btn_in_store_find_new_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_btn_in_store_search_new_store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_in_store_scanner"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>